--- a/e-commerce-ng/src/app/customer/customer.component.html
+++ b/e-commerce-ng/src/app/customer/customer.component.html
@@ -1,25 +1,36 @@
-<p-card style="max-width:700px;margin:2em auto;">
+<p-card [style]="{ 'max-width': '700px', 'margin': '2em auto' }">
   <ng-template pTemplate="header">
     <span class="pi pi-users" style="margin-right:8px;"></span>Customer CRUD
   </ng-template>
-  <p-messages [(value)]="messageService.messages" closable="true"></p-messages>
-  <form (ngSubmit)="saveCustomer()" #dataInput="ngForm">
-    <div class="p-fluid p-formgrid p-grid" style="margin-bottom:1em;">
-      <div class="p-field p-col-12 p-md-6">
-        <label for="name">Name</label>
-        <input pInputText id="name" name="name" [(ngModel)]="customer.name" required />
-      </div>
-      <div class="p-field p-col-12 p-md-6">
-        <label for="email">Email</label>
-        <input pInputText id="email" name="email" [(ngModel)]="customer.email" required />
-      </div>
-      <div class="p-field p-col-12">
-        <label for="address">Address</label>
-        <input pInputText id="address" name="address" [(ngModel)]="customer.address" required />
-      </div>
+  @for (msg of msgs; track msg) {
+  <p-message [severity]="msg.severity" [text]="msg.text" [closable]="true"></p-message>
+  }
+  <form (ngSubmit)="saveCustomer()">
+    <p-fluid style="margin-bottom:1em;">
+      <p-inputgroup style="margin-bottom: 1.25em;">
+        <p-inputgroup-addon>
+          <i class="pi pi-user"></i>
+        </p-inputgroup-addon>
+        <input pInputText id="name" name="name" [(ngModel)]="customer.name" placeholder="Customer name" />
+      </p-inputgroup>
+      <p-inputgroup style="margin-bottom: 1.25em;">
+        <p-inputgroup-addon>
+          <i class="pi pi-envelope"></i>
+        </p-inputgroup-addon>
+        <input pInputText id="email" name="email" [(ngModel)]="customer.email" placeholder="Customer Email" />
+      </p-inputgroup>
+      <p-inputgroup style="margin-bottom: 1.25em;">
+        <p-inputgroup-addon>
+          <i class="pi pi-home"></i>
+        </p-inputgroup-addon>
+        <input pInputText id="address" name="address" [(ngModel)]="customer.address" placeholder="Customer Address" />
+      </p-inputgroup>
+    </p-fluid>
+    <div style="display: flex; gap: 1em; margin-bottom: 1.5em;">
+      <p-button type="submit" label="Save" icon="pi pi-save" class="p-button-success"></p-button>
+      <p-button type="button" label="Reset" icon="pi pi-refresh" class="p-button-secondary"
+        (click)="resetForm()"></p-button>
     </div>
-    <button pButton type="submit" label="Save" icon="pi pi-save" class="p-button-success"></button>
-    <button pButton type="button" label="Reset" icon="pi pi-refresh" class="p-button-secondary" (click)="resetForm()"></button>
   </form>
   <p-table [value]="customers" [paginator]="true" [rows]="10" [loading]="loading" style="margin-top:2em;">
     <ng-template pTemplate="header">
@@ -31,17 +42,21 @@
         <th>Actions</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-c>
+    <ng-template pTemplate="body">
+      @for (c of customers; track c.customerId) {
       <tr>
         <td>{{c.customerId}}</td>
         <td>{{c.name}}</td>
         <td>{{c.email}}</td>
         <td>{{c.address}}</td>
         <td>
-          <button pButton type="button" icon="pi pi-pencil" class="p-button-info p-mr-2" (click)="editCustomer(c)"></button>
-          <button pButton type="button" icon="pi pi-trash" class="p-button-danger" (click)="deleteCustomer(c.customerId)"></button>
+          <button pButton type="button" icon="pi pi-pencil" class="p-button-info p-mr-2"
+            (click)="editCustomer(c)"></button>
+          <button pButton type="button" icon="pi pi-trash" class="p-button-danger"
+            (click)="deleteCustomer(c.customerId)"></button>
         </td>
       </tr>
+      }
     </ng-template>
   </p-table>
 </p-card>
