--- a/e-commerce-ng/src/app/app.html
+++ b/e-commerce-ng/src/app/app.html
@@ -1,22 +1,28 @@
+<p-menubar [model]="menuItems">
+  <ng-template #start>
+    <div class="flex align-items-center">
+      <i class="pi pi-shopping-cart" style="font-size: 2em; margin-right: .5em"></i>
+      <span class="text-2xl font-bold">{{ title() }}</span>
+    </div>
+  </ng-template>
+  <ng-template #item let-item let-root="root">
+    <a pRipple class="flex items-center p-menubar-item-link" [routerLink]="item.routerLink" routerLinkActive="active">
+      <span>{{ item.label }}</span>
+      <i class="{{ item.icon }}" style="margin-left: .5em"></i>
+    </a>
+  </ng-template>
+  <ng-template #end>
+    <div class="flex items-center gap-2">
+      <p>Username: {{ username }}</p>
+      @if (auth.isLoggedIn()) {
+        <p-button type="button" class="p-button-rounded p-button-danger" icon="pi pi-sign-out" label="Logout" (click)="auth.logout()"></p-button>
+      }
+      @else {
+        <p-button type="button" class="p-button-rounded p-button-success" icon="pi pi-sign-in" label="Login" (click)="auth.login()"></p-button>
+      }
+    </div>
+  </ng-template>
+</p-menubar>
 <main>
-  <h1>Hello, e-commerce-ng</h1>
-  <p>Username: {{ username }}</p>
-  @if (auth.isLoggedIn()) {
-  <p>Welcome, you are logged in!</p>
-  <button (click)="auth.logout()">Logout</button>
-  }
-  @else {
-  <button (click)="auth.login()">Login</button>
-  }
-
-  <nav>
-    <a routerLink="/products" routerLinkActive="active">Products</a> |
-    <a routerLink="/customers" routerLinkActive="active">Customers</a> |
-    <a routerLink="/orders" routerLinkActive="active">Orders</a> |
-    <a routerLink="/reviews" routerLinkActive="active">Reviews</a>
-  </nav>
-
   <router-outlet></router-outlet>
 </main>
-
-<router-outlet />
