--- a/e-commerce-ng/src/app/order-item/order-item.component.html
+++ b/e-commerce-ng/src/app/order-item/order-item.component.html
@@ -1,45 +1,80 @@
-<p-card [style]="{ 'max-width': '700px', 'margin': '2em auto' }">
+<p-card [style]="{ 'max-width': '700px', margin: '2em auto' }">
   <ng-template pTemplate="header">
-    <span class="pi pi-list" style="margin-right:8px;"></span>Order Item CRUD
+    <span class="pi pi-list" style="margin-right: 8px"></span>Order Item CRUD
   </ng-template>
   @for (msg of msgs; track msg) {
-  <p-message [severity]="msg.severity" [text]="msg.text" [closable]="true"></p-message>
+    <p-message [severity]="msg.severity" [text]="msg.text" [closable]="true"></p-message>
   }
   <form (ngSubmit)="saveOrderItem()">
-    <p-fluid style="margin-bottom:1em;">
-      <p-inputgroup style="margin-bottom: 1.25em;">
+    <p-fluid style="margin-bottom: 1em">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-hashtag"></i>
         </p-inputgroup-addon>
-        <input pInputText id="orderId" name="orderId" [(ngModel)]="orderItem.orderId" placeholder="Order ID" />
+        <input
+          pInputText
+          id="orderId"
+          name="orderId"
+          [(ngModel)]="orderItem.orderId"
+          placeholder="Order ID"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-box"></i>
         </p-inputgroup-addon>
-        <input pInputText id="productId" name="productId" [(ngModel)]="orderItem.productId" placeholder="Product ID" />
+        <input
+          pInputText
+          id="productId"
+          name="productId"
+          [(ngModel)]="orderItem.productId"
+          placeholder="Product ID"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-sort-numeric-up"></i>
         </p-inputgroup-addon>
-        <input pInputText id="quantity" name="quantity" [(ngModel)]="orderItem.quantity" placeholder="Quantity" />
+        <input
+          pInputText
+          id="quantity"
+          name="quantity"
+          [(ngModel)]="orderItem.quantity"
+          placeholder="Quantity"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-dollar"></i>
         </p-inputgroup-addon>
-        <input pInputText id="price" name="price" [(ngModel)]="orderItem.price" placeholder="Price" />
+        <input
+          pInputText
+          id="price"
+          name="price"
+          [(ngModel)]="orderItem.price"
+          placeholder="Price"
+        />
       </p-inputgroup>
     </p-fluid>
-    <div style="display: flex; gap: 1em; margin-bottom: 1.5em;">
+    <div style="display: flex; gap: 1em; margin-bottom: 1.5em">
       <p-button type="submit" label="Save" icon="pi pi-save" class="p-button-success"></p-button>
-      <p-button type="button" label="Reset" icon="pi pi-refresh" class="p-button-secondary"
-        (click)="resetForm()"></p-button>
+      <p-button
+        type="button"
+        label="Reset"
+        icon="pi pi-refresh"
+        class="p-button-secondary"
+        (click)="resetForm()"
+      ></p-button>
     </div>
   </form>
-  <p-table [value]="orderItems" [paginator]="true" [rows]="10" [loading]="loading" style="margin-top:2em;">
-    <ng-template pTemplate="header">
+  <p-table
+    [value]="orderItems"
+    [paginator]="true"
+    [rows]="10"
+    [loading]="loading"
+    style="margin-top: 2em"
+  >
+    <ng-template #header>
       <tr>
         <th>Order Item ID</th>
         <th>Order ID</th>
@@ -49,22 +84,30 @@
         <th>Actions</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body">
-      @for (oi of orderItems; track oi.orderItemId) {
+    <ng-template #body let-oi>
       <tr>
-        <td>{{oi.orderItemId}}</td>
-        <td>{{oi.orderId}}</td>
-        <td>{{oi.productId}}</td>
-        <td>{{oi.quantity}}</td>
-        <td>{{oi.price}}</td>
+        <td>{{ oi.orderItemId }}</td>
+        <td>{{ oi.orderId }}</td>
+        <td>{{ oi.productId }}</td>
+        <td>{{ oi.quantity }}</td>
+        <td>{{ oi.price }}</td>
         <td>
-          <button pButton type="button" icon="pi pi-pencil" class="p-button-info p-mr-2"
-            (click)="editOrderItem(oi)"></button>
-          <button pButton type="button" icon="pi pi-trash" class="p-button-danger"
-            (click)="deleteOrderItem(oi.orderItemId)"></button>
+          <button
+            pButton
+            type="button"
+            icon="pi pi-pencil"
+            class="p-button-info p-mr-2"
+            (click)="editOrderItem(oi)"
+          ></button>
+          <button
+            pButton
+            type="button"
+            icon="pi pi-trash"
+            class="p-button-danger"
+            (click)="deleteOrderItem(oi.orderItemId)"
+          ></button>
         </td>
       </tr>
-      }
     </ng-template>
   </p-table>
 </p-card>
