--- a/e-commerce-ng/src/app/review/review.component.html
+++ b/e-commerce-ng/src/app/review/review.component.html
@@ -1,51 +1,92 @@
-<p-card [style]="{ 'max-width': '700px', 'margin': '2em auto' }">
+<p-card [style]="{ 'max-width': '700px', margin: '2em auto' }">
   <ng-template pTemplate="header">
-    <span class="pi pi-star" style="margin-right:8px;"></span>Review CRUD
+    <span class="pi pi-star" style="margin-right: 8px"></span>Review CRUD
   </ng-template>
   @for (msg of msgs; track msg) {
-  <p-message [severity]="msg.severity" [text]="msg.text" [closable]="true"></p-message>
+    <p-message [severity]="msg.severity" [text]="msg.text" [closable]="true"></p-message>
   }
   <form (ngSubmit)="saveReview()">
-    <p-fluid style="margin-bottom:1em;">
-      <p-inputgroup style="margin-bottom: 1.25em;">
+    <p-fluid style="margin-bottom: 1em">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-box"></i>
         </p-inputgroup-addon>
-        <input pInputText id="productId" name="productId" [(ngModel)]="review.productId" placeholder="Product ID" />
+        <input
+          pInputText
+          id="productId"
+          name="productId"
+          [(ngModel)]="review.productId"
+          placeholder="Product ID"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-user"></i>
         </p-inputgroup-addon>
-        <input pInputText id="customerId" name="customerId" [(ngModel)]="review.customerId" placeholder="Customer ID" />
+        <input
+          pInputText
+          id="customerId"
+          name="customerId"
+          [(ngModel)]="review.customerId"
+          placeholder="Customer ID"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-star"></i>
         </p-inputgroup-addon>
-        <input pInputText id="rating" name="rating" [(ngModel)]="review.rating" placeholder="Rating" />
+        <input
+          pInputText
+          id="rating"
+          name="rating"
+          [(ngModel)]="review.rating"
+          placeholder="Rating"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-comment"></i>
         </p-inputgroup-addon>
-        <input pInputText id="comment" name="comment" [(ngModel)]="review.comment" placeholder="Comment" />
+        <input
+          pInputText
+          id="comment"
+          name="comment"
+          [(ngModel)]="review.comment"
+          placeholder="Comment"
+        />
       </p-inputgroup>
-      <p-inputgroup style="margin-bottom: 1.25em;">
+      <p-inputgroup style="margin-bottom: 1.25em">
         <p-inputgroup-addon>
           <i class="pi pi-calendar"></i>
         </p-inputgroup-addon>
-        <input pInputText id="reviewDate" name="reviewDate" [(ngModel)]="review.reviewDate" placeholder="Review Date" />
+        <input
+          pInputText
+          id="reviewDate"
+          name="reviewDate"
+          [(ngModel)]="review.reviewDate"
+          placeholder="Review Date"
+        />
       </p-inputgroup>
     </p-fluid>
-    <div style="display: flex; gap: 1em; margin-bottom: 1.5em;">
+    <div style="display: flex; gap: 1em; margin-bottom: 1.5em">
       <p-button type="submit" label="Save" icon="pi pi-save" class="p-button-success"></p-button>
-      <p-button type="button" label="Reset" icon="pi pi-refresh" class="p-button-secondary"
-        (click)="resetForm()"></p-button>
+      <p-button
+        type="button"
+        label="Reset"
+        icon="pi pi-refresh"
+        class="p-button-secondary"
+        (click)="resetForm()"
+      ></p-button>
     </div>
   </form>
-  <p-table [value]="reviews" [paginator]="true" [rows]="10" [loading]="loading" style="margin-top:2em;">
-    <ng-template pTemplate="header">
+  <p-table
+    [value]="reviews"
+    [paginator]="true"
+    [rows]="10"
+    [loading]="loading"
+    style="margin-top: 2em"
+  >
+    <ng-template #header>
       <tr>
         <th>Review ID</th>
         <th>Product ID</th>
@@ -56,23 +97,31 @@
         <th>Actions</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body">
-      @for (r of reviews; track r.reviewId) {
+    <ng-template #body let-r>
       <tr>
-        <td>{{r.reviewId}}</td>
-        <td>{{r.productId}}</td>
-        <td>{{r.customerId}}</td>
-        <td>{{r.rating}}</td>
-        <td>{{r.comment}}</td>
-        <td>{{r.reviewDate}}</td>
+        <td>{{ r.reviewId }}</td>
+        <td>{{ r.productId }}</td>
+        <td>{{ r.customerId }}</td>
+        <td>{{ r.rating }}</td>
+        <td>{{ r.comment }}</td>
+        <td>{{ r.reviewDate }}</td>
         <td>
-          <button pButton type="button" icon="pi pi-pencil" class="p-button-info p-mr-2"
-            (click)="editReview(r)"></button>
-          <button pButton type="button" icon="pi pi-trash" class="p-button-danger"
-            (click)="deleteReview(r.reviewId)"></button>
+          <button
+            pButton
+            type="button"
+            icon="pi pi-pencil"
+            class="p-button-info p-mr-2"
+            (click)="editReview(r)"
+          ></button>
+          <button
+            pButton
+            type="button"
+            icon="pi pi-trash"
+            class="p-button-danger"
+            (click)="deleteReview(r.reviewId)"
+          ></button>
         </td>
       </tr>
-      }
     </ng-template>
   </p-table>
 </p-card>
